third_party/move/move-compiler-v2/tests/checking-lang-v2.2/lambda/bug_16609.exp

Diagnostics:
error: lambda lifting is not allowed in scripts
  ┌─ tests/checking-lang-v2.2/lambda/bug_16609.move:3:30
  │
3 │         let f: || has drop = || {};
  │                              ^^^^^
  │
  = lambda cannot be reduced to partial application of an existing function
