third_party/move/move-compiler-v2/tests/checking-lang-v2.2/lambda/bug_16609.move
script {
    fun function103() {
        let f: || has drop = || {};
    }
}
